--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/memory.css" media="screen">
+  <link rel="stylesheet" href="/css/memory.css" media="screen">
   <title>Memory game avec JavaSript</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
       <div id="alert-footer" class="alert__footer"></div>
     </div>
   </div>
-  <script src="assets/js/memory.js"></script>
+  <script src="/js/memory.js"></script>
 </body>
 </html>
     
