--- a/assets/src/scss/_variables.scss
+++ b/assets/src/scss/_variables.scss
@@ -29,18 +29,17 @@ $card-back-border-color:  #fff;
 
 // counter
 $counter-color:           #fff;
-$counter-text-shadow:       1px 1px 2px rgba(0, 0, 0, .9);
+$counter-text-shadow:       1px 1px 2px rgb(0 0 0 / 90%);
 
 // progress
 $progress-bg-color:       rgba(0, 0, 0, .1);
-$progress-bar-bg-color:   #8c8706;
-$progress-box-shadow:       inset 0 1px 2px rgba(0, 0, 0, .5);
+$progress-box-shadow:       inset 0 2px 2px rgb(255 255 255 / 15%);
 
 // Alert
 $alert-bg-color:          #000;
 $alert-color:             #fff;
-$alert-overlay-bg:        rgba(0, 0, 0, .2);
-$alert-box-shadow:          0 0 10px rgba(0, 0, 0, .3);
+$alert-overlay-bg:        rgb(0 0 0 / 20%);
+$alert-box-shadow:          0 0 10px rgb(0 0 0 / 30%);
 
 // Breakpoints
 $md:                        550px;
