--- a/assets/src/scss/_variables.scss
+++ b/assets/src/scss/_variables.scss
@@ -32,8 +32,8 @@ $counter-color:           #fff;
 $counter-text-shadow:       1px 1px 2px rgb(0 0 0 / 90%);
 
 // progress
-$progress-bg-color:       rgba(0, 0, 0, .1);
-$progress-box-shadow:       inset 0 2px 2px rgb(255 255 255 / 15%);
+$progress-bg-color:         rgb(0 0 0 / 15%);
+$progress-box-shadow:       inset 0 2px 2px rgb(255 255 255 / 50%);
 
 // Alert
 $alert-bg-color:          #000;
